# Bank-Customer-Churn-Prediction

./: README.md  pyproject.toml
model/mlruns/0/: meta.yaml
model/mlruns/882529673906904199/: meta.yaml
model/mlruns/882529673906904199/7bb1509829224efdbd46ab1b8404c8a5/: meta.yaml
model/mlruns/882529673906904199/7bb1509829224efdbd46ab1b8404c8a5/artifacts/bankchurn_model/: MLmodel  conda.yaml  python_env.yaml
model/mlruns/882529673906904199/7bb1509829224efdbd46ab1b8404c8a5/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
model/mlruns/882529673906904199/89e798f58ef9410996d91eb54a284444/: meta.yaml
model/mlruns/882529673906904199/89e798f58ef9410996d91eb54a284444/metrics/: accuracy
model/mlruns/882529673906904199/89e798f58ef9410996d91eb54a284444/tags/: mlflow.runName
model/mlruns/882529673906904199/e5cdc56eec0a4dc19950568b47a66d17/: meta.yaml
model/mlruns/882529673906904199/e5cdc56eec0a4dc19950568b47a66d17/metrics/: accuracy
model/mlruns/882529673906904199/e5cdc56eec0a4dc19950568b47a66d17/tags/: mlflow.runName
notebooks/: demo.ipynb
py/: DataAnalyzer.py  DataLoader.py  DataPreprocessor.py  DataSplitter.py  ModelTrainer.py  ModelVisualizer.py  app.py  main.py
