[tool.poetry]
name = "bankchurn"
version = "0.1.0"
description = ""
authors = ["adrianinfantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
pandas = "^2.1.4"
numpy = "^1.26.3"
matplotlip = "^0.2"
seaborn = "^0.13.1"
mlflow = "^2.9.2"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
jupyterlab = "^4.0.10"
plotly = "^5.18.0"
streamlit = "^1.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
